# Help-Desk-Automation-System

./: .gitignore  README.md  requirements.txt
.github/workflows/: lint-and-test.yml
Project/: app.py  classifier.py  data_models.py  escalation.py  main.py  pyproject.toml  requirements.txt  response.py  retrieval.py  test.py
Project/templates/: index.html
Project/tests/: test_classifier.py  test_escalation.py  test_response.py  test_retrieval.py
Project/tests/integration/: test_classify_and_escalate.py  test_full_workflow.py  test_suite.py
