[project]
name = "Help-Desk-Automation-System"
version = "0.1.0"

[tool.black]
line-length = 88
target-version = ['py38']
skip-string-normalization = true  # Preserves string quotes

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # Pycodestyle errors (indentation, syntax)
    "F",   # Pyflakes (unused vars, imports)
    "B",   # Flake8-bugbear (common bugs)
    "UP",  # Pyupgrade (modern Python syntax)
]
ignore = ["E501", "UP006", "UP035"]  # Ignore

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["E402", "UP035"]  # Ignore import order in test files
"retrieval.py" = ["E402", "UP035"]
